--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group>
+    <group
+        android:id="@+id/menu_top"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/home"
-            android:title="Home" />
-
-        <item
-            android:id="@+id/settings"
-            android:title="Settings" />
+            android:title="Home"
+            android:icon="@drawable/home" />
 
         <item
             android:id="@+id/search"
+            android:icon="@drawable/search"
             android:title="Search" />
+
+    </group>
+
+    <group
+        android:id="@+id/menu_bottom"
+        android:checkableBehavior="none">
+        <item
+            android:id="@+id/settings"
+            android:icon="@drawable/settings"
+            android:title="Settings" />
 
         <item
             android:id="@+id/logout"
+            android:icon="@drawable/logout"
             android:title="Logout" />
     </group>
 
