--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="56dp"
+        android:paddingTop="24dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
         <LinearLayout
@@ -18,11 +18,11 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/iconlauncher"
+                android:src="@drawable/main"
                 android:layout_gravity="center_horizontal" />
             <TextView
                 android:layout_width="wrap_content"
-                android:text="professional skills"
+                android:text="Professional Skills"
                 android:fontFamily="cursive"
                 android:layout_gravity="center"
                 android:textSize="40sp"
