--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="primary">#E43F3F</color>
-  <color name="primary_dark">#E12929</color>
-  <color name="primary_darker">#CC1D1D</color>
-  <color name="accent">#FFFFFF</color>
+    <color name="primary">#9E9E9E</color>
+    <color name="primary_dark">#616161</color>
+    <color name="primary_darker">#424242</color>
+    <color name="accent">#FFFFFF</color>
 
-  <color name="black">#000000</color>
-  <color name="jet">#222222</color>
-  <color name="oil">#333333</color>
-  <color name="monsoon">#777777</color>
-  <color name="jumbo">#888888</color>
-  <color name="aluminum">#999999</color>
-  <color name="base">#AAAAAA</color>
-  <color name="iron">#CCCCCC</color>
-  <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="jet">#222222</color>
+    <color name="oil">#333333</color>
+    <color name="monsoon">#777777</color>
+    <color name="jumbo">#888888</color>
+    <color name="aluminum">#999999</color>
+    <color name="base">#AAAAAA</color>
+    <color name="iron">#CCCCCC</color>
+    <color name="white">#FFFFFF</color>
+    <color name="user_name">#AB47BC</color>
+    <color name="title">#7B1FA2</color>
+    <color name="content">#6A1B9A</color>
+
 </resources>
