--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -11,9 +11,10 @@
         android:layout_height="wrap_content"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
+        android:layout_marginTop="24dp"
         android:weightSum="1">
 
-        <ImageView android:src="@drawable/iconlauncher"
+        <ImageView android:src="@drawable/main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -51,11 +52,10 @@
             <EditText android:id="@+id/first_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
+                android:inputType="textEmailAddress"
                 android:hint="First Name" />
         </android.support.design.widget.TextInputLayout>
 
-        <!-- Address Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -64,7 +64,7 @@
             <EditText android:id="@+id/last_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPostalAddress"
+                android:inputType="textEmailAddress"
                 android:hint="Last Name" />
         </android.support.design.widget.TextInputLayout>
 
@@ -82,6 +82,7 @@
                 android:hint="Mobile Number" />
         </android.support.design.widget.TextInputLayout>
         <!-- address -->
+
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -90,6 +91,7 @@
             <EditText android:id="@+id/address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
                 android:hint="Address" />
         </android.support.design.widget.TextInputLayout>
 
