--- a/app/src/main/res/layout/user_row_for_research_recycler.xml
+++ b/app/src/main/res/layout/user_row_for_research_recycler.xml
@@ -16,6 +16,7 @@
 
         <TextView
             android:id="@+id/tv_email"
+            android:textColor="@color/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -25,6 +26,7 @@
 
         <TextView
             android:id="@+id/tv_phone"
+            android:textColor="@color/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
